Tue Sep 21 04:41:29 2004  Tim Janik  <timj@gtk.org>

	* bsemidireceiver.[hc]*: introduced explicit enabling of polyphonic
	voice handling. avoid warning about unavailable voices for disconnected
	tracks, or if polyphonic handling was not enabled.

	* bsetrack.c: request polyphonic midi channel handling iff the track
	provides a synth mesh and is prepared.

	* bseproject.c: bse_project_start_playback(): ensure all modules are
	properly intergrated into the engine before starting the sequencer.

	* bsesource.c: guard objects with PREPARED flag until after reset()
	invocation.

	* bseengine.[hc]: added bse_module_is_scheduled() and bse_job_nop().

	* bseengineutils.c:
	* bseenginemaster.c: handle nop jobs properly.

Tue Sep 21 02:40:05 2004  Tim Janik  <timj@gtk.org>

	* bsemidireceiver.cc: don't throw invalid warnings.
	voice_input_module_access_U():
	change_voice_input_L(): mono voices may receive note-on while busy.

Tue Sep 21 02:18:37 2004  Tim Janik  <timj@gtk.org>

	* bsemidireceiver.cc: added documentation blurb on voice states and 
	table entries, in relation to note-on, note-off and done=1 events.
	added missing _U and _L locking marks to function names (except
	midi receiver methods which are all implicitely _L).
	voice_input_module_access_U():
	voice_switch_module_reuse_U():
	voice_input_enter_sustain_U():
	voice_input_enter_idle_U(): added mssing locking guards.

Tue Sep 21 01:03:30 2004  Tim Janik  <timj@gtk.org>

	* bsemidireceiver.[hc]*: BseFreeFunc fixup, ensured the free function
	is called from the user thread (BSE core thread) without any locks
	still held.

Mon Sep 20 01:38:14 2004  Tim Janik  <timj@gtk.org>

	* bseproject.proc:
	undo_do_deactivate(): properly deactivate via bse_project_deactivate(),
	not just bse_project_stop_playback() which doesn't reset PREPARED state
	anymore. 
	project_push_undo_silent_deactivate(): stop playback before undo *and*
	redo execution.

	* bsesource.proc: undo fixup for set-automation.
