@@ -1,3 +1,7 @@
+Tue Sep 21 23:59:09 2004  Tim Janik  <timj@gtk.org>
+
+	* bsestorage.c: store and restore property automation setups.
+
 Tue Sep 21 04:41:29 2004  Tim Janik  <timj@gtk.org>
 
 	* bsemidireceiver.[hc]*: introduced explicit enabling of polyphonic
